[package]
name = "keys"
version = "0.1.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
rustc-hex = "2"
lazy_static = "0.2"
base58 = "0.1"
eth-secp256k1 = { git = "https://github.com/paritytech/rust-secp256k1" }
bitcrypto = { path = "../crypto" }
primitives = { path = "../primitives" }
